[gd_scene load_steps=2 format=3 uid="uid://e6he102jq8c3"]

[ext_resource type="Script" path="res://scenes/testsLab/OS_excute.gd" id="1"]

[node name="Test" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ActionTestLab" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="HBoxContainer/ActionTestLab"]
layout_mode = 2
text = "Actions Test Lab"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ActionTestLab"]
layout_mode = 2
size_flags_vertical = 3

[node name="ToolTip" type="RichTextLabel" parent="HBoxContainer/ActionTestLab/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Welcome to Test Console"
scroll_following = true

[node name="Label" type="HBoxContainer" parent="HBoxContainer/ActionTestLab"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ActionTestLab/Label"]
layout_mode = 2
size_flags_horizontal = 14
text = "AutoClose Dead Threads"

[node name="autoclosethreads" type="CheckButton" parent="HBoxContainer/ActionTestLab/Label"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/ActionTestLab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
columns = 2

[node name="SelectProcess" type="OptionButton" parent="HBoxContainer/ActionTestLab/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text_overrun_behavior = 3
clip_text = true

[node name="ClearToolTip" type="Button" parent="HBoxContainer/ActionTestLab/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Clear ToolTip"

[node name="Selectscript" type="Button" parent="HBoxContainer/ActionTestLab/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select Script"

[node name="What is Run" type="Button" parent="HBoxContainer/ActionTestLab/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "What is Run"

[node name="RunScript" type="Button" parent="HBoxContainer/ActionTestLab/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Run Script"

[node name="KillSelectedProcess" type="Button" parent="HBoxContainer/ActionTestLab/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Kill Selected Process"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
disable_3d = true
title = "Open a File"
initial_position = 1
size = Vector2i(495, 397)
exclusive = false
ok_button_text = "Open"
dialog_hide_on_ok = true
dialog_autowrap = true
file_mode = 0
access = 2
filters = PackedStringArray("*.py")
show_hidden_files = true

[connection signal="item_selected" from="HBoxContainer/ActionTestLab/GridContainer/SelectProcess" to="." method="_on_SelectProcess_item_selected"]
[connection signal="pressed" from="HBoxContainer/ActionTestLab/GridContainer/ClearToolTip" to="." method="_on_ClearToolTip_pressed"]
[connection signal="pressed" from="HBoxContainer/ActionTestLab/GridContainer/Selectscript" to="." method="_on_deselect_script_pressed"]
[connection signal="pressed" from="HBoxContainer/ActionTestLab/GridContainer/What is Run" to="." method="_on_What_is_Run_pressed"]
[connection signal="pressed" from="HBoxContainer/ActionTestLab/GridContainer/RunScript" to="." method="_on_Run_Script_pressed"]
[connection signal="pressed" from="HBoxContainer/ActionTestLab/GridContainer/KillSelectedProcess" to="." method="_on_KillCurrentProcess_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
